# Filemanager

./: .gitlab-ci.yml  AUTHORS  CMakeLists.txt  ChangeLog  README-Autopilot.md  README-Developers.md  README-MergeRequest.md  README.md  clickable.json  clickable.yaml  com.ubuntu.filemanager.desktop.in.in  filemanager.apparmor  lomiri-filemanager-app-migrate.py  lomiri-filemanager-app.desktop.in.in  manifest.json.in  postbuild.sh
debian/: changelog  control  copyright  lomiri-filemanager-app-autopilot.install  lomiri-filemanager-app-name-change.sh  lomiri-filemanager-app.install  lomiri-filemanager-app.migrations  rules
po/: CMakeLists.txt  LINGUAS  POTFILES.in  aa.po  af.po  am.po  ar.po  ast.po  az.po  be.po  bem.po  bg.po  bn.po  bn_BD.po  br.po  bs.po  ca.po  ca@valencia.po  ce.po  ckb.po  co.po  com.ubuntu.filemanager.pot  cs.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  en_US.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fo.po  fr.po  (+92 more)
prebuilt/: clickable.json  com.ubuntu.filemanager.desktop  manifest.json
prebuilt/qml/actions/: Select.qml  SelectUnselectAll.qml  Terminal.qml
prebuilt/qml/backend/: FolderListModel.qml  GlobalSettings.qml
prebuilt/qml/dialogs/: ConfirmMultipleDeleteDialog.qml  CreateItemDialog.qml  ExtractingDialog.qml
prebuilt/qml/ui/: FolderListPage.qml  FolderListPageDefaultHeader.qml  FolderListPagePickModeHeader.qml  ViewPopover.qml
prebuilt/qml/views/: FolderDelegateActions.qml
prebuilt/share/locale/am/LC_MESSAGES/: com.ubuntu.filemanager.mo
prebuilt/share/locale/ar/LC_MESSAGES/: com.ubuntu.filemanager.mo
prebuilt/share/locale/ast/LC_MESSAGES/: com.ubuntu.filemanager.mo
prebuilt/share/locale/be/LC_MESSAGES/: com.ubuntu.filemanager.mo
prebuilt/share/locale/bg/LC_MESSAGES/: com.ubuntu.filemanager.mo
prebuilt/share/locale/br/LC_MESSAGES/: com.ubuntu.filemanager.mo
prebuilt/share/locale/bs/LC_MESSAGES/: com.ubuntu.filemanager.mo
prebuilt/share/locale/ca/LC_MESSAGES/: com.ubuntu.filemanager.mo
prebuilt/share/locale/ckb/LC_MESSAGES/: com.ubuntu.filemanager.mo
prebuilt/share/locale/cs/LC_MESSAGES/: com.ubuntu.filemanager.mo
prebuilt/share/locale/da/LC_MESSAGES/: com.ubuntu.filemanager.mo
prebuilt/share/locale/de/LC_MESSAGES/: com.ubuntu.filemanager.mo
prebuilt/share/locale/el/LC_MESSAGES/: com.ubuntu.filemanager.mo
src/app/: CMakeLists.txt  main.cpp
src/app/qml/: filemanager.qml
src/app/qml/actions/: AddBookmark.qml  ArchiveExtract.qml  Cancel.qml  Delete.qml  FileClearSelection.qml  FileCopy.qml  FileCut.qml  FilePaste.qml  GoBack.qml  GoNext.qml  GoTo.qml  NewItem.qml  OpenAdvanced.qml  PlacesBookmarks.qml  Properties.qml  Rename.qml  Search.qml  Select.qml  SelectUnselectAll.qml  Settings.qml  Share.qml  ShowPanel.qml  TabsAdd.qml  TabsCloseThis.qml  TabsOpenInNewTab.qml  Terminal.qml  UnlockFullAccess.qml
src/app/qml/authentication/: AuthenticationHandler.qml  FingerprintDialog.qml  PasswordDialog.qml
src/app/qml/backend/: FolderListModel.qml  GlobalSettings.qml
src/app/qml/components/: BottomPanelStack.qml  EmptyState.qml  HorizontalOptionSelector.qml  PathHistoryRow.qml  ResizeableSidebar.qml  SectionDivider.qml  SidebarPageLayout.qml  TextualButtonStyle.qml  VerticalDivider.qml
src/app/qml/content-hub/: FileOpener.qml  contenttyperesolver.js
src/app/qml/dialogs/: ConfirmExtractDialog.qml  ConfirmMultipleDeleteDialog.qml  ConfirmRenameDialog.qml  ConfirmSingleDeleteDialog.qml  CreateItemDialog.qml  ExtractingDialog.qml  FileActionDialog.qml  FileOperationProgressDialog.qml  NetAuthenticationDialog.qml  NotifyDialog.qml  OpenArchiveDialog.qml  OpenWithDialog.qml
src/app/qml/dialogs/templates/: ConfirmDialog.qml  ConfirmDialogWithInput.qml
src/app/qml/panels/: DefaultBottomBar.qml
src/app/qml/tooltips/: BottomTooltip.qml
src/app/qml/tooltips/template/: Tooltip.qml
src/app/qml/ui/: FileDetailsPopover.qml  FolderListPage.qml  FolderListPageDefaultHeader.qml  FolderListPagePickModeHeader.qml  FolderListPageSelectionHeader.qml  ImagePreview.qml  PlacesPage.qml  ViewPopover.qml
src/app/qml/views/: FolderDelegateActions.qml  FolderIconDelegate.qml  FolderIconView.qml  FolderListDelegate.qml  FolderListView.qml  GridSectionView.qml
src/plugin/: CMakeLists.txt
src/plugin/archives/: CMakeLists.txt  archives.cpp  archives_plugin.cpp  qmldir
src/plugin/folderlistmodel/: CMakeLists.txt  dirmodel.cpp  dirmodel.h  filecompare.cpp  iorequest.cpp  plugin.h  qmldir
src/plugin/folderlistmodel/disk/: disklocation.cpp  disklocation.h
src/plugin/placesmodel/: CMakeLists.txt  placesmodel_plugin.cpp  qmldir
src/plugin/test_folderlistmodel/regression/: ubuntu_touch_run.sh
src/plugin/test_folderlistmodel/simpleUI/: simplelist.cpp  simplelist.ui  terminalfolderapp.cpp
tests/autopilot/: CMakeLists.txt
tests/autopilot/filemanager/: __init__.py
tests/autopilot/filemanager/tests/: __init__.py
tests/autopilot/lomiri_filemanager_app/: CMakeLists.txt
tests/autopilot/lomiri_filemanager_app/tests/: CMakeLists.txt  __init__.py  test_context_menu.py  test_filemanager.py  test_places.py
(+52 files in other folders)
